--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "prettier --write --list-different ."
   },
   "dependencies": {
     "nuxt": "^3.12.4",
@@ -15,6 +16,7 @@
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "prettier": "^3.3.3",
     "sass": "^1.77.8"
   }
 }
