--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "dependencies": {
     "@directus/sdk": "^17.0.0",
     "@yeger/vue-masonry-wall": "^5.0.14",
+    "markdown-it": "^14.1.0",
     "nuxt": "^3.12.4",
     "vue": "latest"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.12.1",
+    "@types/markdown-it": "^14.1.2",
     "@vueuse/core": "^11.0.0",
     "@vueuse/nuxt": "^11.0.0",
     "prettier": "^3.3.3",
