--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@directus/sdk": "^17.0.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@yeger/vue-masonry-wall": "^5.0.14",
     "markdown-it": "^14.1.0",
     "nuxt": "^3.12.4",
